# agent-loopa

./: .env.example  LICENSE  README.md  pyproject.toml
configs/: default_pipeline.toml  generate_pipeline.toml  review_pipeline.toml
docs/: agents.md  architecture.md
src/agent_loopa/: __init__.py
src/agent_loopa/agents/: algorithm_analyzer.py  base.py  code_reviewer.py  coder.py  documentation.py  security.py  test_cases.py
src/agent_loopa/audit/: logger.py
src/agent_loopa/cli/: display.py  generate_cmd.py  main.py  review_cmd.py
src/agent_loopa/config/: loader.py  schema.py
src/agent_loopa/models/: artifacts.py  audit.py  messages.py  verdicts.py
src/agent_loopa/orchestrator/: gate.py  orchestrator.py  pipeline.py
src/agent_loopa/utils/: retry.py
tests/: conftest.py
tests/integration/: test_generate_flow.py
tests/unit/: test_gate.py  test_models.py  test_pipeline.py
tests/unit/agents/: test_coder.py
