[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-loopa"
version = "0.1.0"
description = "Multi-agent SDLC harness: automated collaborative code review and refinement pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "agent-loopa contributors" }]
keywords = ["agents", "llm", "code-review", "sdlc", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "litellm>=1.40.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tomli>=2.0.0",
    "anyio>=4.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
loopa = "agent_loopa.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_loopa"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
]

[tool.hatch.metadata]
allow-direct-references = true
